# deepCNNClassifier

./: .gitignore  README.md  init_setup.sh  params.yaml  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_prepare_callbacks.ipynb
src/deepClassifier/config/: configuration.py
tests/unit/: test_utils.py
