[metadata]
license = MIT
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires = 
    ensure== 1.0.2
python_requires = >=3.7

[options.extras_require]
testing = 
    pytest>=7.1.3 #Run unit test,integration test
    mypy>=0.971 #Check for typing error
    flake8>=5.0.4 #Check any mistakes done in the program, e.g. presence of extra space somewhere in the code
    tox>=3.25.1 #Create different working environment and test locally
    black>=22.8.0 #For Formatting Application

[options.package_data]
deepClassifier = py.typed #Where packages are, and ignore py typed errors

[flake8]
max_line_length = 160 #No of characters in a line of code
exclude = __init__.py

